--- a/static/css/app.less
+++ b/static/css/app.less
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'iconfont';  /* project id 1254358 */
-  src: url('//at.alicdn.com/t/font_1254358_sg3hoikbe0i.eot');
-  src: url('//at.alicdn.com/t/font_1254358_sg3hoikbe0i.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1254358_sg3hoikbe0i.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_1254358_sg3hoikbe0i.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1254358_sg3hoikbe0i.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1254358_sg3hoikbe0i.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_1254358_d1d4d7do7lf.eot');
+  src: url('//at.alicdn.com/t/font_1254358_d1d4d7do7lf.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1254358_d1d4d7do7lf.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1254358_d1d4d7do7lf.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1254358_d1d4d7do7lf.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1254358_d1d4d7do7lf.svg#iconfont') format('svg');
 }
 .iconfont{
   font-family: 'iconfont';
@@ -51,4 +51,10 @@ body{
   .van-uploader__preview {
     margin: 0 !important;
   }
+}
+
+.maintitle{
+  margin: 50px 0;
+  font-size: 30px;
+  text-align: center;
 }
